--- a/pl/mail/chrome/messenger/multimessageview.properties
+++ b/pl/mail/chrome/messenger/multimessageview.properties
@@ -1,8 +1,7 @@
 # FIXME: usunąć komentarze po qa, pierwsza forma może nie zawierać podstawienia?
-# #1 number of messages, example: Selected: 23 messages
-selectedNMessages = Zaznaczono jedną wiadomość;Zaznaczono #2 wiadomości;Zaznaczono #2 wiadomości
-# #1 number of threads, example: across 3 threads
-acrossNThreads    = w jednym wątku; w #2 wątkach; w #2 wątkach
+
+# #1 number of threads or solitary messages selected, example: 4 conversations
+NConversations = #1 wątek;#1 wątki;#1 wątków
 
 numMsgs      = #1 wiadomość;#1 wiadomości;#1 wiadomości
 countUnread  = , #1 nieprzeczytana;, #1 nieprzeczytane;, #1 nieprzeczytanych
