--- a/pl/mail/chrome/messenger-mapi/mapi.properties
+++ b/pl/mail/chrome/messenger-mapi/mapi.properties
@@ -26,6 +26,5 @@ errorMessageTitle = %S
 mapiBlindSendWarning       = Inna aplikacja próbuje wysłać wiadomość używając bieżącego profilu. Czy na pewno wysłać tę wiadomość?
 mapiBlindSendDontShowAgain = Ostrzegaj mnie, gdy inne aplikacje będą próbowały wysłać pocztę ode mnie
 
-#Default Mail Display String
-# localization note, %S is the vendor name
+# Default Mail Display String, %S is the vendor name
 defaultMailDisplayTitle = %S
