--- a/pl/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/pl/mail/chrome/messenger/addressbook/addressBook.properties
@@ -50,7 +50,6 @@ editContactTitle                = Edytuj wizytówkę
 editContactTitleWithDisplayName = Edycja wizytówki: %S
 editVCardTitle                  = Edytuj wizytówkę
 editVCardTitleWithDisplayName   = Edytuj wizytówkę: %S
-## LOCALIZATION NOTE (cardRequiredDataMissingMessage): do not localize \n
 cardRequiredDataMissingMessage  = Musisz wypełnić co najmniej jedno z następujących pól:\nAdres e-mail, Imię, Nazwisko, Pokazuj jako, Firma/Organizacja.
 cardRequiredDataMissingTitle    = Brak wymaganych informacji
 incorrectEmailAddressFormatMessage = Podstawowy adres e-mail musi być postaci użytkownik@domena.
@@ -81,11 +80,10 @@ propertyCustom1                 = Informacja 1
 propertyCustom2                 = Informacja 2
 propertyCustom3                 = Informacja 3
 propertyCustom4                 = Informacja 4
-## FIXME LOCALIZATION NOTE (dateformat)
-## Only used if the year isn't present and should be in the format used by Date.toLocaleFormat
-## see http://developer.mozilla.org/en/Core_JavaScript_1.5_Reference/Global_Objects/Date/toLocaleFormat
-## %B is the month's localized name and %e is the day of the month [1-31]
-## Separators (a space, dash, etc.) can be used
+# FIXME LOCALIZATION NOTE (dateformat)
+# Only used if the year isn't present and should be in the format used by Date.toLocaleFormat
+# see http://developer.mozilla.org/en/Core_JavaScript_1.5_Reference/Global_Objects/Date/toLocaleFormat
+# %B is the month's localized name and %e is the day of the month [1-31], separators (a space, dash, etc.) can be used
 dateformat              = %B %e
 cityAndStateAndZip      = %1$S, %2$S %3$S
 cityAndStateNoZip       = %1$S, %2$S
@@ -99,7 +97,7 @@ addressBook             = Książka adresowa
 # mailnews.js
 ldap_2.servers.pab.description     = Osobista książka adresowa
 ldap_2.servers.history.description = Zebrane adresy
-## LOCALIZATION NOTE (ldap_2.servers.osx.description is only used on Mac OS X)
+# ldap_2.servers.osx.description is only used on Mac OS X
 ldap_2.servers.osx.description     = Systemowa książka adresowa
 totalContactStatus                 = Wszystkich wizytówek w %1$S: %2$S
 noMatchFound    = Nie znaleziono adresów spełniających kryteria wyszukiwania
@@ -141,6 +139,5 @@ renameAddressBookTitle = Właściwości książki adresowej
 corruptMabFileTitle    = Uszkodzony plik książki adresowej
 corruptMabFileAlert    = Odczytanie jednego z plików książki adresowej (%1$S) jest niemożliwe. Utworzony zostanie nowy plik pod nazwą %2$S oraz zostanie zachowana kopia starego pliku książki adresowej pod nazwą %3$S w tym samym katalogu.
 
-# For locked .mab files
 lockedMabFileTitle = Wczytanie pliku książki adresowej było niemożliwe.
 lockedMabFileAlert = Wczytanie pliku książki adresowej %S było niemożliwe. Może to być plik tylko do odczytu lub jest on zablokowany przez inną aplikację. Proszę spróbować ponownie poźniej.
