--- a/pl/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
+++ b/pl/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
@@ -66,7 +66,6 @@
 4= Problem wyszukiwania serwera LDAP
 
 # The format of the alert dialog itself
-#
 ## @name ALERT_FORMAT
 ## @loc None of %1$S, %2$S and %3$S should be localized.
 ##      %1$S is the error code itself, %2$S is an LDAP SDK error message from
@@ -74,10 +73,10 @@
 ##      to that specific error, found in this file.
 errorAlertFormat=Kod błędu %1$S: %2$S\n\n %3$S
 
-## The following errors are for error codes other than LDAP-specific ones.
-## Someday mozilla will actually have a system for mapping nsresults to
-## error strings that's actually widely used, unlike nsIErrorService. But
-## until it does, these strings live here...
+# The following errors are for error codes other than LDAP-specific ones.
+# Someday mozilla will actually have a system for mapping nsresults to
+# error strings that's actually widely used, unlike nsIErrorService. But
+# until it does, these strings live here...
 
 ## @name HOST_NOT_FOUND
 ## @loc none
@@ -87,9 +86,7 @@ errorAlertFormat=Kod błędu %1$S: %2$S\n\n %3$S
 ## @loc none
 9999=Nieznany błąd
 
-# Hints to for the user, associated with specific error codes (ie error code
-# + 10000)
-
+# Hints to for the user, associated with specific error codes (ie error code + 10000)
 
 ## @name TIMELIMIT_EXCEEDED_HINT
 ## @loc none
