--- a/pl/mail/chrome/messenger/addressbook/replicationProgress.properties
+++ b/pl/mail/chrome/messenger/addressbook/replicationProgress.properties
@@ -46,7 +46,7 @@ replicationSucceeded = Replikacja powiodła się
 replicationFailed    = Replikacja nie powiodła się
 replicationCancelled = Replikacja anulowana
 
-# LOCALIZATION NOTE: do not localize %S. %S is the current entry number (an integer)
+# %S is the current entry number (an integer)
 currentCount = Replikowanie pozycji katalogu: %S
 
 downloadButton                 = Pobierz teraz
