--- a/pl/mail/chrome/messenger/localMsgs.properties
+++ b/pl/mail/chrome/messenger/localMsgs.properties
@@ -81,17 +81,13 @@
 # Status - the server doesn't support UIDL...
 ## @name POP3_SERVER_DOES_NOT_SUPPORT_UIDL_ETC
 ## @loc None
-# LOCALIZATION NOTE(4040): The following sentence should be translated in this way:
-# Do not translate "POP3"
-# Do not translate "%S". Place %S in your translation where the name of the server should appear.
+# Place %S in your translation where the name of the server should appear.
 # Do not translate "UIDL"
 4040=Serwer poczty przychodzącej POP3 (%S) nie obsługuje funkcji UIDL ani XTND XLST, które są wymagane do implementacji opcji: "Pozostaw kopię wiadomości na serwerze" oraz "Maksymalny rozmiar pobieranej wiadomości". Aby pobrać wiadomości, należy te opcje wyłączyć w kartach "Ustawienia serwera" oraz "Miejsce na dysku", znajdujących się w oknie "Konfiguracja kont".
 
 # Status - the server doesn't support the top command
 ## @name POP3_SERVER_DOES_NOT_SUPPORT_THE_TOP_COMMAND
 ## @loc None
-# LOCALIZATION NOTE(4011): The following sentence should be translated in this way:
-# Do not translate "POP3"
 # Do not translate "%S". Place %S in your translation where the name of the server should appear.
 # Do not translate "TOP"
 4041=Serwer poczty przychodzącej POP3 (%S) nie obsługuje komendy TOP, która jest wymagana do implementacji opcji "Maksymalny rozmiar pobieranej wiadomości" ani "Pobierz tylko nagłówki". Wszystkie wiadomości, niezależnie od ich rozmiaru, zostaną pobrane, ponieważ sprawdzanie rozmiaru wiadomości zostało wyłączone.
