--- a/pl/mail/chrome/messenger/msgmdn.properties
+++ b/pl/mail/chrome/messenger/msgmdn.properties
@@ -39,7 +39,7 @@
 #
 # ***** END LICENSE BLOCK *****
 
-## Msg Mdn Report strings
+# Msg Mdn Report strings
 MsgMdnDisplayed      = Uwaga: To potwierdzenie doręczenia wiadomości oznacza tylko, że wiadomość została wyświetlona na komputerze adresata. Nie ma żadnej gwarancji, że treść tej wiadomości została przeczytana lub zrozumiana.
 MsgMdnDispatched     = Wiadomość została wydrukowana, przefaksowana lub przekazana bez wyświetlania osobie, do której była adresowana. Nie ma żadnej gwarancji, że treść tej wiadomości została przeczytana lub zrozumiana.
 MsgMdnProcessed      = Wiadomość została przetworzona przez program pocztowy adresata bez wyświetlania osobie, do której była adresowana. Nie ma żadnej gwarancji, że treść tej wiadomości została przeczytana lub zrozumiana.
@@ -49,7 +49,6 @@ MsgMdnFailed         = Wystąpił bład. Prawidłowe potwierdzenie doręczenia w
 MsgMdnWishToSend     = Nadawca tej wiadomości poprosił o potwierdzenie doręczenia wiadomości.\n\nCzy wysłać potwierdzenie doręczenia wiadomości?
 MsgMdnIgnoreRequest  = Zignoruj prośbę
 MsgMdnSendReceipt    = Prześlij potwierdzenie
-# LOCALIZATION NOTE : Do not translate the word "%S" below.
 MsgMdnMsgSentTo      = To jest potwierdzenie doręczenia wiadomości, która została wysłana na adres %S.
 MdnDisplayedReceipt  = Potwierdzenie doręczenia wiadomości (wyświetlono)
 MdnDispatchedReceipt = Potwierdzenie doręczenia wiadomości (doręczono)
