--- a/pl/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/pl/mail/chrome/messenger-newsblog/newsblog.properties
@@ -7,29 +7,27 @@ subscribe-errorOpeningFile        = Nie można otworzyć pliku.
 
 subscribe-OPMLImportTitle           = Proszę wybrać plik OPML do zaimportowania.
 subscribe-OPMLExportTitle           = Eksportowanie listy kanałów do pliku OPML
-## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+# %S is the brandShortName
 subscribe-OPMLExportFileDialogTitle = %S - eksport OPML
 subscribe-OPMLExportDefaultFileName = aktualnosci.%S.opml
-## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
+# %S is the name of the OPML file the user tried to import
 subscribe-errorInvalidOPMLFile      = %S nie jest poprawnym plikiem OPML albo wystąpił błąd podczas jego importowania.
 
 subscribe-OPMLExportOPMLFilesFilterText = Pliki OPML
 
 subscribe-confirmFeedDeletionTitle = Usuń kanał
-## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
+# %S is the name of the feed the user wants to unsubscribe from
 subscribe-confirmFeedDeletion      = Czy na pewno zrezygnować z subskrypcji kanału: \n %S?
 
-## LOCALIZATION NOTE(subscribe-gettingFeedItems):
-##  - The first %S is the number of articles processed so far;
-##  - The second %S is the total number of items
+# first %S is the number of articles processed so far; second %S is the total number of items
 subscribe-gettingFeedItems    = Pobieranie artykułów aktualności (%S z %S)…
 
 newsblog-noNewArticlesForFeed = Nie ma nowych artykułów dla tego źródła.
 newsblog-networkErrorTitle    = Błąd połączenia sieciowego
-## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
+# %S is the feed URL
 newsblog-networkError         = Odnalezienie %S było niemożliwe. Sprawdź poprawność nazwy, a następnie spróbuj ponownie.
 
 newsblog-feedNotValidTitle = Błędne źródło
-## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+# %S is the feed URL
 newsblog-feedNotValid      = %S nie jest poprawnym źródłem aktualności.
 newsblog-getNewMsgsCheck   = Sprawdzanie, czy źródła zawierają nowe artykuły…
