--- a/pl/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/pl/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -54,51 +54,40 @@
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_HOMEMOBILE
 ## @loc None
-# LOCALIZATION NOTE (2012): In the following sentence, do not translate the "%S". Instead,
-# place it in your sentence where you wish to display the mobile phone number.
-
+# %S is the mobile phone number
 2012 = Osobisty tel. komórkowy: %S
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_WORKMOBILE
 ## @loc None
-# LOCALIZATION NOTE (2013): In the following sentence, do not translate the "%S". Instead,
-# place it in your sentence where you wish to display the mobile phone number.
-
+# %S is the mobile phone number
 2013 = Służbowy tel. komórkowy: %S
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_HOMEFAX
 ## @loc None
-# LOCALIZATION NOTE (2014): In the following sentence, do not translate the "%S". Instead,
-# place it in your sentence where you wish to display the fax phone number.
-
+# %S - fax phone number
 2014 = Faks domowy: %S
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_WORKFAX
 ## @loc None
-# LOCALIZATION NOTE (2015): In the following sentence, do not translate the "%S". Instead,
-# place it in your sentence where you wish to display the fax phone number.
-
+# %S - fax phone number
 2015 = Faks służbowy: %S
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHEREMAIL
 ## @loc None
-
 2016 = Inny adres e-mail:
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHERPHONE
 ## @loc None
-
 2017 = Inny telefon:
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHERWEB
 ## @loc None
-
 2018 = Inna witryna WWW:
 
 # Description
@@ -107,7 +96,6 @@
 # LOCALIZATION NOTE (2019): This warning is displayed when one of Eudora's outgoing
 # filters is attempted to be imported. Outgoing filters are ones which are
 # processed when a message is being sent, and are not supported.
-
 2019 = Brak możliwości importu kontekstu filtrów poczty wychodzącej
 
 # Description
@@ -116,7 +104,6 @@
 # LOCALIZATION NOTE (2020): This warning is displayed if the action cannot be imported.
 # The "action" is what is done to the message if the filter matches, e.g. transfer to
 # a mailbox, change the priority. The %S will be replaced with the name of the action.
-
 2020 = Brak możliwości importu: "%S"
 
 # Description
@@ -125,7 +112,6 @@
 # LOCALIZATION NOTE (2021): This warning is displayed if the verb cannot be imported.
 # The "verb" is how filters match the header to the text, e.g. "contains", "is",
 # "begins with". The %s will be replaced with the name of the verb.
-
 2021 = Brak możliwości importu słowa kluczowego: "%s"
 
 # Description
@@ -133,7 +119,6 @@
 ## @loc None
 # LOCALIZATION NOTE (2027): This warning is displayed when the name of the header to be
 # filtered against cannot be found.
-
 2027 = nazwa nagłówka nie została odnaleziona
 
 # Description
@@ -143,7 +128,6 @@
 # negated, but the negative comparison is not supported, e.g. the "starts with" verb has
 # no corresponding "doesn't start with" verb. The %S will be replaced with the name of
 # the verb.
-
 2023 = Brak możliwości zanegowania słowa kluczowego: "%S"
 
 # Description
@@ -153,7 +137,6 @@
 # cannot be supported. Pseudo-headers are things that can match mutiple headers, e.g.
 # "Any Header", or non-header info, e.g. "Junk Score". The %S will be replaced with
 # the name of the pseudo-header.
-
 2028 = Brak możliwości importu %S nagłówka
 
 # Description
@@ -162,5 +145,4 @@
 # LOCALIZATION NOTE (2025): This warning is displayed when a filter has an action to
 # transfer the message to a mailbox, but the named mailbox doesn't exist. The %S will
 # be replaced with the name of the mailbox.
-
 2025 = Nie można odnaleźć skrzynki pocztowej "%S"
