--- a/pl/mail/chrome/messenger/filter.properties
+++ b/pl/mail/chrome/messenger/filter.properties
@@ -18,13 +18,13 @@ continueButtonLabel             = Kontynuuj
 cannotEnableFilter              = Ten filtr został prawdopodobnie stworzony w innej wersji Mozilli lub Netscape. Nie można włączyć tego filtru ponieważ nie wiadomo jak go zastosować
 dontWarnAboutDeleteCheckbox     = Nie pytaj ponownie
 
-# LOCALIZATION NOTE(junkLogDetectStr): %1$S=author, %2$S=subject, %3$S=date
+# %1$S=author, %2$S=subject, %3$S=date
 junkLogDetectStr          = Wykryto niechcianą wiadomość od %1$S - %2$S, wysłana %3$S
-# LOCALIZATION NOTE(logMoveStr): %1$S=message id, %2$S=folder URI
+# %1$S=message id, %2$S=folder URI
 logMoveStr                = przeniesiono wiadomość o id = %1$S do %2$S
-# LOCALIZATION NOTE(logCopyStr): %1$S=message id, %2$S=folder URI
+# %1$S=message id, %2$S=folder URI
 logCopyStr                = skopiowano wiadomość o id = %1$S do %2$S
-# LOCALIZATION NOTE(filterLogDetectStr): %1$S=filter name %2$S=author, %3$S=subject, %4$S=date
+# %1$S=filter name %2$S=author, %3$S=subject, %4$S=date
 filterLogDetectStr        = Zastosowano filtr "%1$S" dla wiadomości od %2$S - %3$S, wysłanej %4$S
 # FIXME: fuzzy filterMissingCustomAction, "Missing Custom Action"
 filterMissingCustomAction = Brakująca czynność
