--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -324,7 +324,7 @@ errorOpenMessageForMessageIdMessage = Nie odnaleziono wiadomości o ID: %S
 
 # Warnings to alert users about phishing urls
 confirmPhishingTitle = Ostrzeżenie przed próbą oszustwa
-#LOCALIZATION NOTE %1$S is the brand name, %2$S is the host name of the url being visited
+# %1$S is the brand name, %2$S is the host name of the url being visited
 confirmPhishingUrl   = %1$S uważa tę wiadomość za próbę oszustwa. Strony, do których wiodą odnośniki z tej wiadomości, mogą udawać miejsce, które chce odwiedzić użytkownik. Czy na pewno adres %2$S jest tym, który chciano odwiedzić?
 
 # Check for Updates
@@ -346,15 +346,15 @@ folderPaneHeader_recent    = Ostatnie foldery
 folderPaneHeader_smart     = Pogrupowane foldery
 smartAccountName           = Pogrupowane foldery
 
-# LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
+#  %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
 # should have the same value as copyToFolderAgainAccessKey as they are the same menu item in the UI
 moveToFolderAgain          = Przenieś ponownie do "%1$S"
 moveToFolderAgainAccessKey = o
-# LOCALIZATION NOTE %1$S is the name of the folder we will copy to copyToFolderAgainAccessKey
+# %1$S is the name of the folder we will copy to copyToFolderAgainAccessKey
 copyToFolderAgain          = Kopiuj ponownie do "%1$S"
 copyToFolderAgainAccessKey = o
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+# %1$S is the e-mail address of the person we will allow remote content for
 alwaysLoadRemoteContentForSender2 = Zawsze wyświetlaj zdalną zawartość w wiadomościach od %1$S
 
 # Strings for growl notifications on Mac OS X
