Bug 496647 Set content tab titles from the actual content not pre-stored values.

--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -478,8 +478,8 @@ fileNotFoundMsg = Le fichier %S n'existe pas.
 # the user is in the To or Cc field of a message
 headerFieldYou=Vous-même
 
-# The what's new tab title, shown on version update
-whatsNew=Quoi de neuf ?
+# Shown when content tabs are being loaded.
+loadingTab=Chargement en cours…
 
 applyToCollapsedMsgsTitle=Confirmer la suppression des messages dans les fils de discussion réduits
 applyToCollapsedMsgs=Attention - cette action supprimera les messages des fils de discussion réduits
