correct problems in the migration wizard (suite)

--- a/pl/suite/chrome/common/migration/migration.properties
+++ b/pl/suite/chrome/common/migration/migration.properties
@@ -1,8 +1,8 @@
 # the following section is used in the first-time migration wizard
 # new and scary, however if these strings are not present, we will simply 
 # skip this wizard page
-homePageStartDefault=Domyślna strona domowa programu &brandShortName;
-homePageStartCurrent=Obecna strona domowa programu &brandShortName;
+homePageStartDefault=Domyślna strona domowa programu SeaMonkey
+homePageStartCurrent=Obecna strona domowa programu SeaMonkey
 homePageImport=Importuj stronę domową z %S
 
 homePageMigrationPageTitle=Wybór strony domowej
@@ -11,12 +11,12 @@ homePageMigrationDescription=Proszę wybrać stronę domową, która ma być uż
 
 # note that the names of apps are in lower case to fit in with the
 # protocol specifications.
-sourceNameseamonkey=SeaMonkey 1.x, Netscape 6/7 or Mozilla 1.x
+sourceNameseamonkey=SeaMonkey 1.x, Netscape 6/7 lub Mozilla 1.x
 sourceNamethunderbird=Thunderbird
 
 importedBookmarksFolder=Z programu %S
 
-importedSeamonkeyBookmarksTitle=SeaMonkey 1.x, Netscape 6/7 or Mozilla 1.x
+importedSeamonkeyBookmarksTitle=SeaMonkey 1.x, Netscape 6/7 lub Mozilla 1.x
 
 # Import Sources
 # These are the string names for the values given in nsISuiteProfileMigrator.idl
