add new chatzilla strings

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -806,6 +806,9 @@ msg.need.oper.password=Proszę wprowadzić hasło, aby uzyskać uprawnienia oper
 
 # Better IRC error messages
 msg.irc.381=Jesteś teraz operatorem IRC. 
+msg.irc.401=Pseudonim ``$S'' nie istnieje.
+msg.irc.402=Serwer ``$S'' nie istnieje.
+msg.irc.403=Kanał ``$S'' nie istnieje.
 msg.irc.464=Nieprawidłowe hasło, spróbuj ponownie podając prawidłowe hasło. 
 msg.irc.464.login=Aby kontynuować proces łączenia, należy podać swoje hasło używając komendy "/pass". 
 msg.irc.471=Nie można dołączyć do kanału - osiągnięto maksymalną ustawioną liczbę użytkowników. 
