--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -481,8 +481,8 @@ fileNotFoundMsg=Soubor %S nebyl nenalezen.
 # the user is in the To or Cc field of a message
 headerFieldYou=já
 
-# The what's new tab title, shown on version update
-whatsNew=Co je nového
+# Shown when content tabs are being loaded.
+loadingTab=Načítání…
 
 applyToCollapsedMsgsTitle=Potvrzení smazání zpráv ve sbalených vláknech
 applyToCollapsedMsgs=Upozornění - tato akce smaže zprávy ve sbalených vláknech
