--- a/pl/security/manager/chrome/pipnss/pipnss.properties
+++ b/pl/security/manager/chrome/pipnss/pipnss.properties
@@ -297,6 +297,17 @@ PKCS12UnknownErrBackup=Nie udało się utworzyć kopii bezpieczeństwa PKCS #12 
 PKCS12UnknownErr=Operacja PKCS #12 nie powiodła się z nieznanych powodów.
 PKCS12InfoNoSmartcardBackup=Zachowanie kopii certyfikatu zapisanego w urządzeniu zabezpieczającym, jak np. inteligentna karta jest niemożliwe.
 PKCS12DupData=To urządzenie zabezpieczające posiada już certyfikat oraz klucz prywatny.
+AddModulePrompt=Czy na pewno zainstalować wybrany moduł szyfrujący?
+AddModuleName=Nazwa modułu: %S
+AddModulePath=Ścieżka: %S
+AddModuleSuccess=Nowy moduł szyfrujący został pomyślnie zainstalowany
+AddModuleFailure=Nie można dodać modułu
+AddModuleDup=Moduł szyfrujący już istnieje
+DelModuleBadName=Niewłaściwa nazwa modułu.
+DelModuleWarning=Czy na pewno usunąć wybrany moduł szyfrujący?
+DelModuleError=Nie można usunąć modułu
+DelModuleIntSuccess=Wewnętrzny moduł szyfrujący został pomyślnie usunięty
+DelModuleExtSuccess=Zewnętrzny moduł szyfrujący został pomyślnie usunięty
 ForcedBackup1=Zaleca się wykonanie zabezpieczonej hasłem kopii nowo otrzymanego certyfikatu bezpieczeństwa oraz towarzyszącego klucza prywatnego.
 ForcedBackup2=W przypadku utraty dostępu do klucza prywatnego w związku z utratą osobistego hasła lub uszkodzeniem pliku, możliwe będzie odtworzenie klucza prywatnego oraz certyfikatu z zachowanej kopii.
 ForcedBackup3=Kliknij przycisk OK, aby wykonać kopię. Jeżeli to możliwe, utworzoną kopię należy zachować na dyskietce przechowywanej w bezpiecznym miejscu.
