Unify wording for start/end of events and tasks

--- a/de/calendar/chrome/calendar/calendar.properties
+++ b/de/calendar/chrome/calendar/calendar.properties
@@ -167,7 +167,7 @@ tooltipDate     =Datum:
 tooltipStatus   =Status:
 # task/todo fields
 # start date time, due date time, task priority number, completed date time
-tooltipStart    =Start:
+tooltipStart    =Beginn:
 tooltipDue      =Fällig:
 tooltipPriority =Priorität:
 tooltipPercent  =% fertig:
@@ -455,10 +455,10 @@ taskEditInstructions=Zum Erstellen einer Aufgabe hier klicken
 taskEditInstructionsReadonly=Bitte einen Kalender mit Schreibrechten auswählen
 taskEditInstructionsCapability=Bitte einen Kalender auswählen, der Aufgaben unterstützt
 
-eventDetailsStartDate=Start:
+eventDetailsStartDate=Beginn:
 eventDetailsEndDate=Ende:
-taskDetailsStartDate=Start:
-taskDetailsEndDate=Fälligkeitsdatum:
+taskDetailsStartDate=Beginn:
+taskDetailsEndDate=Fällig:
 
 # LOCALIZATION NOTE (datetimeWithTimezone):
 # used for a display of a date-time with timezone 'Thu 2 Oct 2008 13:21', Europe/Paris
@@ -556,14 +556,14 @@ datetimeIntervalTaskWithoutDate=kein Start oder Fälligkeitsdatum
 # (showed only in exported calendar in Html format)
 #    %1$S will be replaced with the date of the start date
 #    %2$S will be replaced with the time of the start date
-datetimeIntervalTaskWithoutDueDate=Start %1$S %2$S
+datetimeIntervalTaskWithoutDueDate=Beginn %1$S %2$S
 # LOCALIZATION NOTE (datetimeIntervalTaskWithoutStartDate):
 # used for intervals in task with only due date
 # displayed form is 'due date 5 Jan 2006 13:00'
 # (showed only in exported calendar in Html format)
 #    %1$S will be replaced with the date of the due date
 #    %2$S will be replaced with the time of the due date
-datetimeIntervalTaskWithoutStartDate=Fälligkeitsdatum %1$S %2$S
+datetimeIntervalTaskWithoutStartDate=Fällig %1$S %2$S
 
 deleteTaskLabel=Aufgabe löschen
 deleteTaskAccesskey=l
