Fix typo in calendar.properties

--- a/de/calendar/chrome/calendar/calendar.properties
+++ b/de/calendar/chrome/calendar/calendar.properties
@@ -133,7 +133,7 @@ None=Keine
 # Error strings
 ## @name UID_NOT_FOUND
 ## @loc none
-tooNewSchemaErrorBoxTitle=Ihre Kalenderdaten sind nicht komaptibel mit dieser Version von %1$S
+tooNewSchemaErrorBoxTitle=Ihre Kalenderdaten sind nicht kompatibel mit dieser Version von %1$S
 
 # LOCALIZATION NOTE (tooNewSchemaErrorBoxTextLightning):
 #    %1$S will be replaced with the name of the calendar application e.g. 'Lightning'
