Part of Bug 440794 Leverage Offline capabilities to make sending email appear faster - improve the activity manager UI to give split send/copy progress and associaite sent mails with identities. r/sr=bienvenu,ui-review=clarkbw

--- a/nl/mail/chrome/messenger/activity.properties
+++ b/nl/mail/chrome/messenger/activity.properties
@@ -13,16 +13,21 @@ yesterday=Gisteren
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 #1 
 
-# Send Message
+# LOCALIZATION NOTE (sendingMessages): this is used as a title for grouping processes in the activity manager when sending email.
+sendingMessages=Berichten verzenden
+# LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sendingMessage=Bericht verzenden
-# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Bericht verzenden aan %S
+sendingMessageWithSubject=Bericht verzenden: %S
+copyMessage=Bericht kopiëren naar de map “Verzonden”
 sentMessage=Bericht verzonden
 # LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
 sentMessageTo=Bericht verzonden aan %S
 failedToSendMessage=Bericht verzenden mislukt
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Bericht verzenden aan %S mislukt
+failedToCopyMessage=Bericht kopiëren mislukt
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=Bericht verzenden mislukt: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=Bericht kopiëren mislukt: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
