--- a/nl/mail/chrome/messenger/activity.properties
+++ b/nl/mail/chrome/messenger/activity.properties
@@ -82,3 +82,24 @@ indexingFolderStatusExact=#1 van #2 bericht indexeren in #4;#1 van #2 berichten 
 indexedFolder=#1 bericht geïndexeerd in #2;#1 berichten geïndexeerd in #2
 # LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
 indexedFolderStatus=#1 seconde verstreken;#1 seconden verstreken
+indexing=Berichten indexeren
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+indexingFolder=Berichten indexeren in #1
+indexingStatusVague=Bepalen welke berichten te indexeren
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+indexingFolderStatusVague=Bepalen welke berichten te indexeren in #1
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+indexingStatusExact=#1 van #2 bericht indexeren;#1 van #2 berichten indexeren (#3% voltooid)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+indexingFolderStatusExact=#1 van #2 bericht indexeren in #4;#1 van #2 berichten indexeren in #4 (#3% voltooid)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+indexedFolder=#1 bericht geïndexeerd in #2;#1 berichten geïndexeerd in #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+indexedFolderStatus=#1 seconde verstreken;#1 seconden verstreken
