--- a/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -335,7 +335,7 @@ renameAttachmentMessage=Nytt namn på bilagan:
 ## Attachment Reminder
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
-mail.compose.attachment_reminder_keywords=bilaga,bilagor,bifoga,.doc,.pdf,dokument,CV
+mail.compose.attachment_reminder_keywords=.doc,.pdf,bilaga,bilagor,bifogar,bifogat,bifogad,bifogade,dokument,CV
 attachmentReminderTitle=Påminnelse om bilaga
 attachmentReminderMsg=Glömde du att lägga till en bilaga?
 attachmentReminderYesIForgot=Javisst ja!
