Part of Bug 440794 Leverage Offline capabilities to make sending email appear faster - improve the activity manager UI to give split send/copy progress and associaite sent mails with identities. r/sr=bienvenu,ui-review=clarkbw ,  vergeten string

--- a/nl/mail/chrome/messenger/activity.properties
+++ b/nl/mail/chrome/messenger/activity.properties
@@ -20,8 +20,8 @@ sendingMessage=Bericht verzenden
 sendingMessageWithSubject=Bericht verzenden: %S
 copyMessage=Bericht kopiëren naar de map “Verzonden”
 sentMessage=Bericht verzonden
-# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Bericht verzonden aan %S
+# LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sentMessageWithSubject=Bericht verzonden: %S
 failedToSendMessage=Bericht verzenden mislukt
 failedToCopyMessage=Bericht kopiëren mislukt
 # LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
