Bug 480674 Formulate content policy for Audio/Video tags. r=mnyromyr,sr=dmose,ui-review=clarkbw

--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -451,8 +451,8 @@ moveToFolderAgainAccessKey=i
 copyToFolderAgain=Opnieuw naar “%1$S” kopiëren
 copyToFolderAgainAccessKey=i
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1=Afbeeldingen op afstand van %1$S altijd laden
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2= Niet-ingebedde inhoud van %1$S altijd laden 
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Nieuwe e-mail
