--- a/nl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -332,3 +332,12 @@ mailnews.reply_header_originalmessage=-------- Origineel bericht --------
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Bijlage hernoemen
 renameAttachmentMessage=Nieuwe bijlagenaam:
+
+## Attachment Reminder
+## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
+##   words that that should trigger an attachment reminder.
+mail.compose.attachment_reminder_keywords=.doc,.pdf,bijlage,toegevoegd,toevoegen,bijgevoegd,CV,brief
+attachmentReminderTitle=Bijlage herinnering
+attachmentReminderMsg=Bent u vergeten om een bijlage toe tevoegen?
+attachmentReminderYesIForgot=Oh, inderdaad!
+attachmentReminderFalseAlarm=Nee, nu verzenden
