Fix bug 485912 - Recurring events with monthly rule: "every" + "day of the month", show a wrong recurrence summary and cause an error.

--- a/de/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/de/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -149,6 +149,12 @@ monthlyDayOfNth=Tag %1$S jedes Monats;Tag %1$S jedes #2. Monats
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=am letzten Tag des Monats; am letzten Tag jedes #1. Monats
 
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=jeden Tag jedes Monats;jeden Tag jedes #2. Monats
+
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
 # considered in 'repeatDetailsDayxNounclass' strings. For languages that need
