--- a/nl/calendar/chrome/calendar/calendar.properties
+++ b/nl/calendar/chrome/calendar/calendar.properties
@@ -566,8 +566,11 @@ datetimeIntervalTaskWithoutDueDate=begindatum %1$S %2$S
 datetimeIntervalTaskWithoutStartDate=einddatum %1$S %2$S
 
 deleteTaskLabel=Taak verwijderen
+deleteTaskMessage=Wilt u deze taak echt verwijderen?
 deleteTaskAccesskey=v
 deleteItemLabel=Verwijderen
+deleteItemMessage=Wilt u dit item echt verwijderen?
 deleteItemAccesskey=V
 deleteEventLabel=Gebeurtenis verwijderen
+deleteEventMessage=Wilt u deze gebeurtenis echt verwijderen?
 deleteEventAccesskey=v
