L10n for bug 392021 -  Event dialog: Option to delete event/task

--- a/pl/calendar/chrome/calendar/calendar.properties
+++ b/pl/calendar/chrome/calendar/calendar.properties
@@ -571,8 +571,11 @@ datetimeIntervalTaskWithoutDueDate=początek: %1$S %2$S
 datetimeIntervalTaskWithoutStartDate=koniec: %1$S %2$S
 
 deleteTaskLabel=Usuń zadanie
+deleteTaskMessage=Czy na pewno usunąć to zadanie?
 deleteTaskAccesskey=U
 deleteItemLabel=Usuń
+deleteItemMessage=Czy na pewno usunąć tę pozycję?
 deleteItemAccesskey=U
 deleteEventLabel=Usuń wydarzenie
+deleteEventMessage=Czy na pewno usunąć to wydarzenie?
 deleteEventAccesskey=U
