L10n for bug 485912 -  Recurring events with monthly rule: "every" + "day of the month", show a wrong recurrence summary and cause an error.

--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -149,6 +149,12 @@ monthlyDayOfNth=w %1$S. dzień miesiąca;w %1$S. dzień miesiąca co #2 miesiąc
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=w ostatni dzień miesiąca;w ostatni dzień miesiąca co #1 miesiące;w ostatni dzień miesiąca co #1 miesięcy
 
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=w każdy dzień miesiąca;w każdy dzień miesiąca co #2 miesiące;w każdy dzień miesiąca co #2 miesięcy
+
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
 # considered in 'repeatDetailsDayxNounclass' strings. For languages that need
